fix: body overflow

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ section {
 
 body {
   margin: 0;
+  padding: 0;
   font-family: "Inter UI", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol";
@@ -86,7 +87,8 @@ body {
   color: #cfd8dc;
   text-align: left;
   background-color: #000000;
-  width: 100vw;
+  width: 100%;
+  max-width: 100vw;
   overflow-x: hidden;
 }
 
